syntax = "proto3";

package kafmesh.deviceId;

option go_package = "deviceId";

import "google/protobuf/timestamp.proto";

message EnrichedDetails {
    google.protobuf.Timestamp time = 1;
    string name = 2;
    int64 customer_id = 3;
    string customer_name = 4;
}
