syntax = "proto3";

package kafmesh.deviceId;

option go_package = "deviceId";

import "kafmesh/deviceId/details.proto";
import "google/protobuf/wrappers.proto";

message EnrichedDetailsState {
    Details details = 1;
    google.protobuf.Int64Value customer_id = 2;
}
